force-app/main/default/objects/Prospect_Price_Guidance_Settings__c/Prospect_Price_Guidance_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores the dollar ranges that can be used as variable help-text for a user to know what &quot;High&quot; &quot;Medium&quot; &quot;Low&quot; is. Update these values to have the values update on the page layout</description>
    <label>Prospect Price Guidance Settings</label>
</CustomObject>