force-app/main/default/objects/Prospect_Price_Guidance_Settings__c/fields/FS_Avg_Spend_High_SAAL__c.field-meta.xml
<CustomField>
    <fullName>FS_Avg_Spend_High_SAAL__c</fullName>
    <description>High range of the facilities spend</description>
    <inlineHelpText>High range of the facilities spend if the prospect is a Saalfeld VOS Business group.</inlineHelpText>
    <label>FS: Avg Spend - High - SAAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>