force-app/main/default/objects/Prospect_Price_Guidance_Settings__c/fields/FS_Avg_Spend_High_VRTV__c.field-meta.xml
<CustomField>
    <fullName>FS_Avg_Spend_High_VRTV__c</fullName>
    <description>High range of the facilities spend</description>
    <inlineHelpText>High range of the facilities spend</inlineHelpText>
    <label>FS: Avg Spend - High - VRTV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>