force-app/main/default/objects/Prospect_Price_Guidance_Settings__c/fields/FS_Avg_Spend_Medium_SAAL__c.field-meta.xml
<CustomField>
    <fullName>FS_Avg_Spend_Medium_SAAL__c</fullName>
    <description>Medium range of the facilities spend if the prospect is a Saalfeld VOS Business group.</description>
    <inlineHelpText>Medium range of the facilities spend if the prospect is a Saalfeld VOS Business group.</inlineHelpText>
    <label>FS: Avg Spend - Medium SAAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>