force-app/main/default/objects/Prospect_Price_Guidance_Settings__c/fields/FS_Order_Size_High_VRTV__c.field-meta.xml
<CustomField>
    <fullName>FS_Order_Size_High_VRTV__c</fullName>
    <description>High range of the average order size for the customer in the facilities solutions segment</description>
    <inlineHelpText>High range of the average order size for the customer in the facilities solutions segment</inlineHelpText>
    <label>FS: Order Size - High VRTV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>