force-app/main/default/objects/Prospect_Price_Guidance_Settings__c/fields/FS_Order_Size_Medium_SAAL__c.field-meta.xml
<CustomField>
    <fullName>FS_Order_Size_Medium_SAAL__c</fullName>
    <description>Medium range of the facilities order size if the prospect is a Saalfeld VOS Business group.</description>
    <inlineHelpText>Medium range of the facilities order size if the prospect is a Saalfeld VOS Business group.</inlineHelpText>
    <label>FS: Order Size - Medium SAAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>