force-app/main/default/objects/Prospect_Price_Guidance_Settings__c/fields/FS_Order_Size_Medium_VRTV__c.field-meta.xml
<CustomField>
    <fullName>FS_Order_Size_Medium_VRTV__c</fullName>
    <description>Medium range of the average order size of the facilities solutions segment</description>
    <inlineHelpText>Medium range of the average order size of the facilities solutions segment</inlineHelpText>
    <label>FS: Order Size - Medium VRTV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>