force-app/main/default/objects/Prospect_Price_Guidance_Settings__c/fields/Packaging_Avg_Spend_High_VRTV__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Avg_Spend_High_VRTV__c</fullName>
    <description>High range of the packaging spend</description>
    <inlineHelpText>High range of the packaging spend</inlineHelpText>
    <label>Packaging: Avg Spend - High - VRTV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>