force-app/main/default/objects/Prospect_Price_Guidance_Settings__c/fields/Packaging_Avg_Spend_Medium_SAAL__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Avg_Spend_Medium_SAAL__c</fullName>
    <description>Medium range of the Packaging spend if the prospect is a Saalfeld VOS Business group.</description>
    <inlineHelpText>Medium range of the Packaging spend if the prospect is a Saalfeld VOS Business group.</inlineHelpText>
    <label>Packaging: Avg Spend - Medium SAAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>