force-app/main/default/objects/Prospect_Price_Guidance_Settings__c/fields/Packaging_Order_Size_High_VRTV__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Order_Size_High_VRTV__c</fullName>
    <description>High Range of the packaging order size if the prospect is a Veritiv Business Group</description>
    <inlineHelpText>High Range of the packaging order size if the prospect is a Veritiv Business Group</inlineHelpText>
    <label>Packaging: Order Size - High VRTV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>