force-app/main/default/objects/Prospect_Price_Guidance_Settings__c/fields/Packaging_Order_Size_Medium_SAAL__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Order_Size_Medium_SAAL__c</fullName>
    <description>Medium Range of the packaging order size if the prospect is a Saalfield VOS Business Group</description>
    <inlineHelpText>Medium Range of the packaging order size if the prospect is a Saalfield VOS Business Group</inlineHelpText>
    <label>Packaging: Order Size - Medium SAAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>