force-app/main/default/objects/Prospect_Price_Guidance_Settings__c/fields/Print_Avg_Spend_High_SAAL__c.field-meta.xml
<CustomField>
    <fullName>Print_Avg_Spend_High_SAAL__c</fullName>
    <description>High range of the print spend</description>
    <inlineHelpText>High range of the print spend if the prospect is a Saalfeld VOS Business group.</inlineHelpText>
    <label>Print: Avg Spend - High - SAAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>