force-app/main/default/objects/Prospect_Price_Guidance_Settings__c/fields/Print_Avg_Spend_Medium_VRTV__c.field-meta.xml
<CustomField>
    <fullName>Print_Avg_Spend_Medium_VRTV__c</fullName>
    <description>Low range of the print spend</description>
    <inlineHelpText>Low range of the Print spend</inlineHelpText>
    <label>Print: Avg Spend - Medium VRTV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>